--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
          <section>
             <div class="header-container">
                 <div class="header-description">
-                    <h2>Play Like The</h2>
+                    <h2>PLAY LIKE THE</h2>
                     <h1 class="goat">G.O.A.T.</h1>
-                    <p>1-Click instant play</p>
-                    <p>No Download</p>
-                    <p>No Download</p>
+                    <p><span style="color: rgb(255, 66, 165);;"><i class="fa-regular fa-circle-play"></i></span> 1-Click instant play</p>
+                    <p><span style="color: rgb(255, 66, 165);;"><i class="fa-solid fa-download"></i></span> No Download</p>
+                    <p><i class="fa-regular fa-user"></i> 1000s of supported online games</p>
+                    <div class="header-btn">
+                        <button class="header-btn-1">SIGN IN</button>
+                        <button class="header-btn-2">GO ROGUE</button>
+                    </div>
 
                 </div>
                 <div class="header-img">
                     <img src="images/Group 18.png" alt="">
-
                 </div>
             </div>
          </section>
