play game online section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Game Zone</title>
 </head>
 
@@ -21,34 +23,105 @@
                 <div class="nav-menu">
                     <li>About Us</li>
                     <li>Developers</li>
-                    <a class="follow-us-design" href="">Follow us on <span class="nav-youtube" style="color: red;"><i class="fa-brands fa-youtube"></i> <span class="nav-tiktok" style="color: black;"><i class="fa-brands fa-tiktok"></i></span></a>
+                    <a class="follow-us-design" href="">Follow us on <span class="nav-youtube" style="color: red;"><i
+                                class="fa-brands fa-youtube"></i> <span class="nav-tiktok" style="color: black;"><i
+                                    class="fa-brands fa-tiktok"></i></span></a>
                 </div>
             </div>
         </nav>
 
         <!-- header part -->
-         <section>
+        <section>
             <div class="header-container">
                 <div class="header-description">
                     <h2>PLAY LIKE THE</h2>
                     <h1 class="goat">G.O.A.T.</h1>
-                    <p><span style="color: rgb(255, 66, 165);;"><i class="fa-regular fa-circle-play"></i></span> 1-Click instant play</p>
-                    <p><span style="color: rgb(255, 66, 165);;"><i class="fa-solid fa-download"></i></span> No Download</p>
+                    <p><span style="color: rgb(255, 66, 165);;"><i class="fa-regular fa-circle-play"></i></span> 1-Click
+                        instant play</p>
+                    <p><span style="color: rgb(255, 66, 165);;"><i class="fa-solid fa-download"></i></span> No Download
+                    </p>
                     <p><i class="fa-regular fa-user"></i> 1000s of supported online games</p>
                     <div class="header-btn">
                         <button class="header-btn-1">SIGN IN</button>
                         <button class="header-btn-2">GO ROGUE</button>
                     </div>
-
                 </div>
+
                 <div class="header-img">
                     <img src="images/Group 18.png" alt="">
                 </div>
             </div>
-         </section>
+        </section>
 
     </header>
     <main>
+        <section>
+            <div class="second-container">
+                <div class="second-container-img">
+                    <img src="images/pngwing 4.png" alt="">
+
+                </div>
+                <div class="second-container-text">
+                    <h1>We are gamer</h1>
+                    <p>An international digital games and entertainment <br> company. We develop, publish and distribute
+                        multiplayer <br> mobile games. We reach over 400 million players each <br> month and our
+                        audience keeps
+                        growing.</p>
+                    <button class="know-more-btn">KNOW MORE</button>
+                    <p class="our-pourpose">Our purpose...</p>
+                    <h3 class="unleash">“unleash the gamer in everyone”</h3>
+
+                </div>
+            </div>
+        </section>
+        <!-- Online game section -->
+        <section>
+            <h1 class="online-heading">Online Games <span class="funny-video">Funny Videos</span></h1>
+            <p class="online-heading-desc">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="online-game-container">
+                <div class="img-box">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p class="online-game-para">No Download. No Installs. Play games <br> Instantly on Gamer.</p>
+                </div>
+
+                <div class="img-box">
+                    <img src="images/Rectangle 5.png" alt="">
+
+                    <p class="online-game-para">Did you score? #unblockedgames <br> #school</p>
+                </div>
+
+                <div class="img-box" id="overlay-img">
+
+                    <img src="images/Rectangle 7.png" alt="">
+                    <div class="overlay">
+                        <p class="play-icon"><i class="fa-regular fa-circle-play"></i></p>
+                        <p>Watch Now</p>
+                    </div>
+                    <p class="online-game-para">Breaking game records <br> like OG</p>
+                </div>
+                <div class="img-box">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p class="online-game-para">Busted gaming on school laptop,<br> but you are still lit.</p>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Instantly section -->
+         <section>
+            <div class="instantly-container">
+                <div class="instantly-text-container">
+                    <h1><span>Play Instantly,</span> <br> No Downloads</h1>
+                    <h1>No Installs.</h1>
+                    <p>Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
+
+                </div>
+                <div class="instantly-img-container">
+                    <img src="images/Rectangle 55.png" alt="">
+                </div>
+                <img src="images/Rectangle 66.png" alt="">
+            </div>
+         </section>
 
     </main>
 
